option('arch', type: 'combo', choices: ['arm', 'i386'], value: 'arm',
    description: 'Set the architecture for which the test applications are built.')

option('disable_qemu_tests', type: 'boolean', value: false)
option('disable_step_tests', type: 'boolean', value: false)
option('disable_toplevel_tests', type: 'boolean', value: false)
option('disable_gpslogger_tests', type: 'boolean', value: false)

option('arm_include_dirs', type: 'array', value: ['/usr/lib/arm-none-eabi/include'],
    description: 'A list of include dirs for compiling for ARM. Only relevant, if arch==arm.')
option('arm_link_dirs', type: 'array', value: ['/usr/lib/arm-none-eabi/newlib/thumb'],
    description: 'A list of link dirs for compiling for ARM. Only relevant, if arch==arm.')
option('arm_gcc_version', type: 'string', value: 'default',
    description: 'The version of the GCC cross compiler for ARM. The special value of "default" assumes the same version like the system GCC. Only relevant, if arch==arm.')
option('arm_gcc_dir', type: 'string', value: '/usr/lib/gcc/arm-none-eabi/@0@',
    description: 'The path to the GCC ARM toolchain. Note that @0@ is replaced with the arm_gcc_version. Only relevant, if arch==arm.')
