option('arch', type: 'combo', choices: ['arm', 'i386'], value: 'arm',
    description: 'Set the architecture for which the test applications are built.')

option('enable_qemu_tests', type: 'boolean', value: true)
option('enable_step_tests', type: 'boolean', value: true,
    description: 'Unit tests for ARA itself.')
option('enable_toplevel_tests', type: 'boolean', value: true,
    description: 'Not actual tests, but stored common commandlines and examples for calling ARA.')
option('enable_gpslogger_tests', type: 'boolean', value: true)
option('enable_librepilot_tests', type: 'boolean', value: true)
option('enable_zephyr_tests', type: 'boolean', value: false,
    description: 'All Zephyr tests are located in test/zephyr_test. The enable_step_tests option will be ignored for Zephyr tests. Only activate these tests if you have a zephyr_project directory in build dir. This directory will be generated via init_zephyr.sh script')

option('arm_include_dirs', type: 'array', value: ['/usr/lib/arm-none-eabi/include'],
    description: 'A list of include dirs for compiling for ARM. Only relevant, if arch==arm.')
option('arm_link_dirs', type: 'array', value: ['/usr/lib/arm-none-eabi/newlib/thumb/v7-m/nofp/'],
    description: 'A list of link dirs for compiling for ARM. Only relevant, if arch==arm. (Sometimes need to remove trailing nofp/')
option('arm_gcc_version', type: 'string', value: 'default',
    description: 'The version of the GCC cross compiler for ARM. The special value of "default" assumes the same version like the system GCC. Only relevant, if arch==arm.')
option('arm_gcc_dir', type: 'string', value: '/usr/lib/gcc/arm-none-eabi/@0@/thumb/v7-m/nofp/',
    description: 'The path to the GCC ARM toolchain. Note that @0@ is replaced with the arm_gcc_version. Only relevant, if arch==arm. (Sometimes need to remove trailing nofp/)')
option('zephyr_dir', type: 'string', value: '',
    description: 'The path where the zephyr source is located, so the zephyrproject folder. More information on the zephyr setup can be found in the README')
